keylime (6.3.0-1) unstable; urgency=medium

  [ Thore Sommer ]
  * New upstream version 6.3.0
  * drop dataclass patch

 -- Thore Sommer <debian@thson.de>  Thu, 27 Jan 2022 17:42:42 +0100

keylime (6.2.1-1) unstable; urgency=medium

  [ Thore Sommer ]
  * New upstream version 6.2.1.
  * d/watch: adjust regex for newer versions.
  * d/p/using-ssl3.6-constant-for-TLSv12.patch:
    remove patch as it has been merged upstream.
  * d/p/embed-dataclasses-module.patch: refresh
    patch.

  [ Utkarsh Gupta ]
  * Add Thore Sommer as an uploader

 -- Thore Sommer <debian@thson.de>  Mon, 03 Jan 2022 20:10:00 +0100

keylime (6.2.0-3) unstable; urgency=medium

  * d/control: Drop libtss2-dev from
    Depends/Build-Depends as it's not needed.

 -- Utkarsh Gupta <utkarsh.gupta@canonical.com>>  Tue, 19 Oct 2021 19:59:08 +0530

keylime (6.2.0-2) unstable; urgency=medium

  * d/python3-keylime-agent.keylime_agent.service:
    Make the path to chown absolute.
  * d/rules: Don't auto-start services on
    installation or upgrades.

 -- Utkarsh Gupta <utkarsh.gupta@canonical.com>  Wed, 29 Sep 2021 15:57:16 +0530

keylime (6.2.0-1) unstable; urgency=medium

  [ Thore Sommer ]
  * New upstream version 6.2.0.
  * d/control: add new dependencies:
    - python3-packaging.
    - python3-psutil.
  * d/control: drop tpm2-abrmd as a dependency.

  [ Miriam Espana Acebal ]
  * d/p/using-ssl3.6-constant-for-TLSv12.patch:
    Adapting ssl library use: new minimun_version 3.7
    to 3.6 option use with OP_NO_TLSv1_2.

  [ Utkarsh Gupta ]
  * d/patches: Refresh patches.
  * d/control: Move sqlalchemy and alembic to -server.

 -- Utkarsh Gupta <utkarsh.gupta@canonical.com>  Mon, 13 Sep 2021 16:25:18 +0530

keylime (6.1.1-1) unstable; urgency=medium

  [ Utkarsh Gupta ]
  * New upstream version 6.1.1.
  * Revert "Don't run keylime_agent as non-root for now".
    - Upstream has implemented this via #666 so it doesn't
      need to be root anymore.