@@ -37,6 +37,8 @@ case "$1" in
     # Setting owner of log dir of server
     if [ "${KEYLIME_PART}" = "server" ] && [ -d /var/log/keylime ] && getent passwd keylime >/dev/null; then
         chown keylime:tss /var/log/keylime
+        chown keylime:tss /var/run/keylime
+        chmod 700 /var/run/keylime
     fi
 
     ;;
